src/objects/LogEntry__c.object
<CustomObject>
    <fields>
        <fullName>RecordDetailedLink__c</fullName>
        <formula>IF(
    NOT(ISBLANK(RecordId__c)),
    CASE(
        TEXT(RecordSObjectClassification__c),
        &apos;Custom Object&apos;, HYPERLINK(
            &apos;/&apos; + RecordId__c,
            TEXT(RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            &apos;_top&apos;
        ),
        &apos;Standard Object&apos;, HYPERLINK(
            &apos;/&apos; + RecordId__c,
            TEXT(RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            &apos;_top&apos;
        ),
        IF(
            ISBLANK(RecordId__c),
            null,
            IF(
                ISBLANK(RecordName__c) &amp;&amp; NOT(ISBLANK(RecordId__c)),
                TEXT(RecordSObjectType__c) + &apos;: &apos; + RecordId__c,
                TEXT(RecordSObjectType__c) + &apos;: &apos; + RecordName__c
            )
        )
    ),
    IF(
        ISBLANK(TEXT(RecordCollectionType__c)),
        &apos;&apos;,
        IF(
            TEXT(RecordCollectionType__c) = &apos;Map&apos;,
            TEXT(RecordCollectionType__c) + &apos;&lt;Id, &apos; + TEXT(RecordSObjectType__c) + &apos;&gt;&apos;,
            TEXT(RecordCollectionType__c) + &apos;&lt;&apos; + TEXT(RecordSObjectType__c) + &apos;&gt;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <externalId>true</externalId>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordJsonMasked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the record JSON, using log entry data mask rules</inlineHelpText>
        <label>Record JSON Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordJson__c</fullName>
        <description>JSON of the related SObject record</description>
        <label>Related Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordLink__c</fullName>
        <formula>IF(
    NOT(ISBLANK(RecordId__c)),
    CASE(
        TEXT(RecordSObjectClassification__c),
        &apos;Custom Object&apos;, HYPERLINK(
            &apos;/&apos; + RecordId__c,
            IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            &apos;_top&apos;
        ),
        &apos;Standard Object&apos;, HYPERLINK(
            &apos;/&apos; + RecordId__c,
            IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            &apos;_top&apos;
        ),
        IF(
            ISBLANK(RecordName__c),
            RecordId__c,
            RecordName__c
        )
    ),
    IF(
        ISBLANK(TEXT(RecordCollectionType__c)),
        &apos;&apos;,
        IF(
            TEXT(RecordCollectionType__c) = &apos;Map&apos;,
            TEXT(RecordCollectionType__c) + &apos;&lt;Id, &apos; + TEXT(RecordSObjectType__c) + &apos;&gt;&apos;,
            TEXT(RecordCollectionType__c) + &apos;&lt;&apos; + TEXT(RecordSObjectType__c) + &apos;&gt;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <label>Related Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordSObjectClassification__c</fullName>
        <label>Related Record Object Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Event Object</fullName>
                </value>
                <value>
                    <fullName>Chatter Feed Object</fullName>
                </value>
                <value>
                    <fullName>Custom Metadata Type Object</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Setting Object</fullName>
                </value>
                <value>
                    <fullName>Field History Tracking Object</fullName>
                </value>
                <value>
                    <fullName>Platform Event Object</fullName>
                </value>
                <value>
                    <fullName>Record Share Object</fullName>
                </value>
                <value>
                    <fullName>Standard Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordSObjectTypeNamespace__c</fullName>
        <externalId>true</externalId>
        <label>Related Record Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordSObjectType__c</fullName>
        <label>Related Record Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionEntryNumber__c</fullName>
        <description>The sequential number of this log entry within the transaction</description>
        <inlineHelpText>The sequential number of this log entry within the transaction</inlineHelpText>
        <label>Entry Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerIsExecuting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Is Executing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerOperationType__c</fullName>
        <label>Trigger Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFTER_DELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_INSERT</fullName>
                </value>
                <value>
                    <fullName>AFTER_UNDELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_UPDATE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_DELETE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_INSERT</fullName>
                </value>
                <value>
                    <fullName>BEFORE_UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriggerSObjectType__c</fullName>
        <label>Trigger Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <formula>IF(
    TriggerIsExecuting__c,
    TEXT(TriggerSObjectType__c) + &apos;.&apos; + TEXT(TriggerOperationType__c),
    null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger</label>
        <type>Text</type>
    </fields>
    <label>Log Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>LoggingLevelWithImage__c</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>Message__c</columns>
        <columns>OriginType__c</columns>
        <columns>OriginLocation__c</columns>
        <columns>RecordDetailedLink__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllApexLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>LoggingLevelWithImage__c</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>Message__c</columns>
        <columns>ApexClassName__c</columns>
        <columns>ApexInnerClassName__c</columns>
        <columns>ApexMethodName__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OriginType__c</field>
            <operation>equals</operation>
            <value>Apex</value>
        </filters>
        <label>All Apex Log Entries</label>
    </listViews>
    <listViews>
        <fullName>AllComponentLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>LoggingLevelWithImage__c</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>Message__c</columns>
        <columns>ComponentType__c</columns>
        <columns>ComponentApiName__c</columns>
        <columns>ComponentFunctionName__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OriginType__c</field>
            <operation>equals</operation>
            <value>Component</value>
        </filters>
        <label>All Component Log Entries</label>
    </listViews>
    <listViews>
        <fullName>AllERRORandWARNLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>LoggingLevelWithImage__c</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>Message__c</columns>
        <columns>OriginType__c</columns>
        <columns>OriginLocation__c</columns>
        <columns>RecordDetailedLink__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LoggingLevel__c</field>
            <operation>equals</operation>
            <value>ERROR,WARN</value>
        </filters>
        <label>All ERROR and WARN Log Entries</label>
    </listViews>
    <listViews>
        <fullName>AllFlowLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>LoggingLevelWithImage__c</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>Message__c</columns>
        <columns>OriginLocation__c</columns>
        <columns>FlowProcessType__c</columns>
        <columns>FlowTriggerType__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OriginType__c</field>
            <operation>equals</operation>
            <value>Flow</value>
        </filters>
        <label>All Flow Log Entries</label>
    </listViews>
    <nameField>
        <label>Entry ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>